; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-seri.c_wb_real.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-seri.c_wb_real.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.write_block = type { i32 }

@TYPE_NUMBER = common dso_local global i32 0, align 4
@TYPE_NUMBER_REAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.write_block*, double)* @wb_real to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wb_real(%struct.write_block* %0, double %1) #0 {
  %3 = alloca %struct.write_block*, align 8
  %4 = alloca double, align 8
  %5 = alloca double, align 8
  store %struct.write_block* %0, %struct.write_block** %3, align 8
  store double %1, double* %4, align 8
  %6 = load i32, i32* @TYPE_NUMBER, align 4
  %7 = load i32, i32* @TYPE_NUMBER_REAL, align 4
  %8 = call double @COMBINE_TYPE(i32 %6, i32 %7)
  store double %8, double* %5, align 8
  %9 = load %struct.write_block*, %struct.write_block** %3, align 8
  %10 = call i32 @wb_push(%struct.write_block* %9, double* %5, i32 1)
  %11 = load %struct.write_block*, %struct.write_block** %3, align 8
  %12 = call i32 @wb_push(%struct.write_block* %11, double* %4, i32 8)
  ret void
}

declare dso_local double @COMBINE_TYPE(i32, i32) #1

declare dso_local i32 @wb_push(%struct.write_block*, double*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
